penambahan dark mode and fix beberapa bug

--- a/style.css
+++ b/style.css
@@ -13,6 +13,54 @@ body {
   background: #eeeeed;
   margin: 0;
   padding-top: 60px;
+  transition: background-color 0.3s ease;
+}
+
+/** Dark Mode Body */
+
+.dark-mode {
+  background-color: #222;
+  color: #fff;
+}
+
+.dark-mode-toggle {
+  background-color: transparent;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin-left: 10px;
+  font-size: 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.dark-mode-toggle:hover {
+  background-color: transparent;
+  color: lightblue;
+}
+
+body.dark-mode nav {
+  color: #fff;
+}
+
+body.dark-mode .nav_link {
+  color: #fff;
+}
+
+body.dark-mode h2 {
+  color: #fff;
+}
+
+body.dark-mode .nav_link {
+  color: #fff;
+  transition: color 0.3s ease;
+}
+
+body.dark-mode .nav_link:hover {
+  color: lightblue;
 }
 
 header {
@@ -227,6 +275,10 @@ header {
   font-family: "Blood Crow", sans-serif;
 }
 
+.p-tanjiro {
+  font-size: 50px;
+}
+
 .article {
   margin-left: 20px;
 }
@@ -347,15 +399,6 @@ h2 {
   grid-column-end: 9;
   grid-row-start: 6;
   grid-row-end: 9;
-}
-
-.trailer-video {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin: 250px 0;
 }
 
 /** SLider Corousell */
@@ -593,5 +636,12 @@ footer {
   .slider img {
     width: 100%;
     height: auto;
+  }
+
+  .gallery_img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    margin-top: 50px;
   }
 }
